# robot-description

./: CMakeLists.txt  package.xml
pointfoot/PF_P441A/urdf/: robot.urdf  robot_rl.urdf
pointfoot/PF_P441A/xacro/: const.xacro  leg.xacro  robot.xacro
pointfoot/PF_P441A/xml/: robot.xml
pointfoot/PF_P441B/meshes/: abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
pointfoot/PF_P441B/urdf/: robot.urdf  robot_rl.urdf
pointfoot/PF_P441B/xacro/: const.xacro  leg.xacro  robot.xacro
pointfoot/PF_P441B/xml/: robot.xml
pointfoot/PF_P441C/meshes/: abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
pointfoot/PF_P441C/urdf/: robot.urdf  robot_rl.urdf
pointfoot/PF_P441C/xacro/: const.xacro  leg.xacro  robot.xacro
pointfoot/PF_P441C/xml/: robot.xml
pointfoot/PF_P441C2/meshes/: abad_R_Link.STL  hip_L_Link.STL
pointfoot/PF_P441C2/urdf/: robot.urdf  robot_rl.urdf
pointfoot/PF_P441C2/xacro/: const.xacro  leg.xacro  robot.xacro
pointfoot/PF_P441C2/xml/: robot.xml
pointfoot/PF_TRON1A/meshes/: foot_L_Link.STL  foot_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
pointfoot/PF_TRON1A/urdf/: robot.urdf  robot_rl.urdf
pointfoot/PF_TRON1A/xacro/: const.xacro  leg.xacro  robot.xacro
pointfoot/PF_TRON1A/xml/: robot.xml
pointfoot/PF_TRON1B/meshes/: abad_L_Link.STL  abad_R_Link.STL  hip_R_Link.STL
pointfoot/PF_TRON1B/urdf/: robot.urdf
pointfoot/PF_TRON1B/xacro/: leg.xacro  robot.xacro
pointfoot/SF_TRON1A/meshes/: L_foot.STL  R_foot.STL  abad_L_Link.STL  abad_R_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
pointfoot/SF_TRON1A/urdf/: robot.urdf  robot_rl.urdf
pointfoot/SF_TRON1A/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro  ros2_control_interface.xacro
pointfoot/urdf/: robot.urdf
pointfoot/xacro/: leg.xacro  robot.xacro  ros2_control_interface.xacro
wheellegged/meshes/: LF_calf.STL  LF_thigh.STL  LH_thigh.STL  RF_thigh.STL  RF_wheel.STL  RH_wheel.STL
wheellegged/urdf/: robot.urdf
(+89 files in other folders)
